test/Fail/TeXSpanningComment.lagda.tex
\begin{code}
  {- a
\end{code}

\begin{code}
  b -}
\end{code}
