test/Fail/TeXSpanningComment.err
TeXSpanningComment.lagda.tex:2.3-6.7: error: [OverlappingTokensWarning]
Multi-line comment spans one or more literate text blocks.
